--- a/css/style.css
+++ b/css/style.css
@@ -143,8 +143,8 @@ body {
     .navbar {
       background:white;
       margin-bottom: 0;
-      position: fixed; /* Set the navbar to fixed position */
-      top: 0; /* Position the navbar at the top of the page */
+      /*position: fixed; /* Set the navbar to fixed position */
+      /*top: 0; /* Position the navbar at the top of the page */
       width: 100%; /* Full width */
     }
 
