--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1592,6 +1592,7 @@ html {
     margin-left: auto;
     padding-left: 15px;
     padding-right: 15px;
+    white-space: nowrap;
   }
   @media (min-width: 768px) {
     .container {
