--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 html {
   scroll-behavior: smooth;
 }
+
+html,body
+{
+    overflow-x: hidden; 
+}
 body {
     font-family: 'Montserrat', sans-serif;
     color: #000000;
